cmake_minimum_required(VERSION 3.9 FATAL_ERROR)

set(WITH_QT ON CACHE BOOL "")
set(WITH_GTK OFF CACHE BOOL "")
set(WITH_GTK_2_X OFF CACHE BOOL "")
set(WITH_VTK OFF CACHE BOOL "")

# we need only:
set(BUILD_opencv_core ON CACHE BOOL "")
set(BUILD_opencv_videoio ON CACHE BOOL "")
set(BUILD_opencv_imgproc ON CACHE BOOL "")
set(BUILD_opencv_video ON CACHE BOOL "")
set(BUILD_opencv_tracking ON CACHE BOOL "")
set(BUILD_opencv_videostab ON CACHE BOOL "")
set(BUILD_opencv_features2d ON CACHE BOOL "")
set(BUILD_opencv_saliency ON CACHE BOOL "")
set(BUILD_opencv_calib3d ON CACHE BOOL "")
set(BUILD_opencv_objdetect ON CACHE BOOL "")

# dependencies:
set(BUILD_opencv_flann ON CACHE BOOL "")
set(BUILD_opencv_imgcodecs ON CACHE BOOL "")
set(BUILD_opencv_plot ON CACHE BOOL "")
set(BUILD_opencv_photo ON CACHE BOOL "")

set(BUILD_cnn_3dobj OFF CACHE BOOL "")
set(BUILD_cudaarithm OFF CACHE BOOL "")
set(BUILD_cudabgsegm OFF CACHE BOOL "")
set(BUILD_cudacodec OFF CACHE BOOL "")
set(BUILD_cudafeatures2d OFF CACHE BOOL "")
set(BUILD_cudafilters OFF CACHE BOOL "")
set(BUILD_cudaimgproc OFF CACHE BOOL "")
set(BUILD_cudalegacy OFF CACHE BOOL "")
set(BUILD_cudaobjdetect OFF CACHE BOOL "")
set(BUILD_cudaoptflow OFF CACHE BOOL "")
set(BUILD_cudastereo OFF CACHE BOOL "")
set(BUILD_cudawarping OFF CACHE BOOL "")
set(BUILD_cudev OFF CACHE BOOL "")
set(BUILD_freetype OFF CACHE BOOL "")
set(BUILD_hdf OFF CACHE BOOL "")
set(BUILD_java OFF CACHE BOOL "")
set(BUILD_js OFF CACHE BOOL "")
set(BUILD_matlab OFF CACHE BOOL "")
set(BUILD_opencv_apps OFF CACHE BOOL "")
set(BUILD_opencv_aruco OFF CACHE BOOL "")
set(BUILD_opencv_bgsegm OFF CACHE BOOL "")
set(BUILD_opencv_bioinspired OFF CACHE BOOL "")
set(BUILD_opencv_ccalib OFF CACHE BOOL "")
set(BUILD_opencv_cvv OFF CACHE BOOL "")
set(BUILD_opencv_datasets OFF CACHE BOOL "")
set(BUILD_opencv_dnn OFF CACHE BOOL "")
set(BUILD_opencv_dnn_objdetect OFF CACHE BOOL "")
set(BUILD_opencv_dpm OFF CACHE BOOL "")
set(BUILD_opencv_face OFF CACHE BOOL "")
set(BUILD_opencv_fuzzy OFF CACHE BOOL "")
set(BUILD_opencv_gapi OFF CACHE BOOL "")
set(BUILD_opencv_hfs OFF CACHE BOOL "")
set(BUILD_opencv_highgui OFF CACHE BOOL "")
set(BUILD_opencv_img_hash OFF CACHE BOOL "")
set(BUILD_opencv_java_bindings_generator OFF CACHE BOOL "")
set(BUILD_opencv_js OFF CACHE BOOL "")
set(BUILD_opencv_line_descriptor OFF CACHE BOOL "")
set(BUILD_opencv_ml OFF CACHE BOOL "")
set(BUILD_opencv_optflow OFF CACHE BOOL "")
set(BUILD_opencv_phase_unwrapping OFF CACHE BOOL "")
set(BUILD_opencv_python_bindings_generator OFF CACHE BOOL "")
set(BUILD_opencv_reg OFF CACHE BOOL "")
set(BUILD_opencv_rgbd OFF CACHE BOOL "")
set(BUILD_opencv_shape OFF CACHE BOOL "")
set(BUILD_opencv_stereo OFF CACHE BOOL "")
set(BUILD_opencv_stitching OFF CACHE BOOL "")
set(BUILD_opencv_structured_light OFF CACHE BOOL "")
set(BUILD_opencv_superres OFF CACHE BOOL "")
set(BUILD_opencv_surface_matching OFF CACHE BOOL "")
set(BUILD_opencv_text OFF CACHE BOOL "")
set(BUILD_opencv_ts OFF CACHE BOOL "")
set(BUILD_opencv_world OFF CACHE BOOL "")
set(BUILD_opencv_xfeatures2d OFF CACHE BOOL "")
set(BUILD_opencv_ximgproc OFF CACHE BOOL "")
set(BUILD_opencv_xobjdetect OFF CACHE BOOL "")
set(BUILD_opencv_xphoto OFF CACHE BOOL "")
set(BUILD_ovis OFF CACHE BOOL "")
set(BUILD_python2 OFF CACHE BOOL "")
set(BUILD_python3 OFF CACHE BOOL "")
set(BUILD_sfm OFF CACHE BOOL "")
set(BUILD_viz OFF CACHE BOOL "")

set(OPENCV_EXTRA_MODULES_PATH "${CMAKE_CURRENT_SOURCE_DIR}/opencv_contrib/modules" CACHE PATH "")

add_subdirectory(opencv)
